fixing overflow

--- a/src/assets/waveSvg/_wave.scss
+++ b/src/assets/waveSvg/_wave.scss
@@ -6,7 +6,7 @@
 
 .waveSvg {
   width: 200vw;
-  max-height: 19vh;
+  // max-height: 19vh;
 }
 
 .frontWave {
