--- a/src/components/AboutMe/_aboutMe.scss
+++ b/src/components/AboutMe/_aboutMe.scss
@@ -9,14 +9,16 @@
 }
 .socialBtnContainer {
   height: 15vh;
-  width: 100%;
+  width: 90%;
   display: flex;
+  margin: auto;
   margin-top: 4rem;
 }
 .aboutMeSocialBtn {
   position: relative;
   width: 100%;
   text-align: center;
+  margin: 0 5px;
 }
 .aboutMeSocialBtn a img {
   height: 100%;
