--- a/src/components/Projects/_projects.scss
+++ b/src/components/Projects/_projects.scss
@@ -13,7 +13,7 @@
   overflow-y: hidden;
 }
 .projectsHeader {
-  padding: 1rem;
+  padding: 0 1rem;
   max-height: 10%;
 }
 
